smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/conflicting-use.smithy
// Cannot use name `foo.baz#String` because it conflicts with `smithy.api#String`
$version: "2.0"

namespace smithy.example

use smithy.api#String
use foo.baz#String
